--- a/app/src/main/res/layout/fragment_mobile.xml
+++ b/app/src/main/res/layout/fragment_mobile.xml
@@ -22,6 +22,7 @@
                 bind:title="@string/app_name" />
 
             <android.support.design.widget.TabLayout
+                android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 bind:tabSelectedTextColor="@android:color/white"
