--- a/app/src/main/res/layout/view_empty_content.xml
+++ b/app/src/main/res/layout/view_empty_content.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -13,15 +14,37 @@
             name="isNoDataAvailable"
             type="Boolean" />
 
+        <variable
+            name="isShowTryAgain"
+            type="Boolean" />
+
     </data>
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/light_gray"
-        android:gravity="center"
-        android:text="@{message}"
-        android:textSize="20sp"
-        android:visibility="@{isNoDataAvailable ? View.VISIBLE : View.GONE}" />
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/text_error_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@{message}"
+            android:textSize="20sp"
+            android:visibility="@{isNoDataAvailable ? View.VISIBLE : View.GONE}"
+            tools:text="@string/error_message_no_mobile_found" />
+
+        <Button
+            android:id="@+id/button_try_again"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/text_error_message"
+            android:layout_centerInParent="true"
+            android:visibility="@{isShowTryAgain ? View.VISIBLE : View.GONE}"
+            android:text="@string/try_again" />
+
+    </RelativeLayout>
 
 </layout>
